# qrscan

./: Cargo.toml  flake.nix
.github/workflows/: cd.yml  ci.yml
src/: main.rs
