[package]
name = "qrscan"
description = "Scan a QR code in the terminal using the system camera or a given image"
version = "0.1.9"
edition = "2021"
authors = ['Arijit Basu <hi@arijitbasu.in>']
license = 'MIT'
readme = 'README.md'
repository = 'https://github.com/sayanarijit/qrscan'
homepage = 'https://github.com/sayanarijit/qrscan'
keywords = ['qrcode', 'qr', 'scan', 'reader', 'scanner']
categories = ['command-line-interface', 'command-line-utilities']

[dependencies]
qrencode = { version = "0.14.0", features = ["svg"] }
image = "0.25.9"
# Expose the version of image that qrencode depends on
image-24 = { version = "0.24.9", package = "image" }
rqrr = "0.10.1"
clap = { version = "4.3.9", features = ["derive"] }
anyhow = "1.0.71"
csscolorparser = "0.8.1"
viuer = "0.11.0"
nokhwa = { version = "0.10.6", features = ["input-native"] }

[dev-dependencies]
assert_cmd = "2.0.11"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
